samples/_failures_safe/1761144661_a7cf41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4368b3c4.c: In function ‘main’:
./samples/SAFE/__tmp_4368b3c4.c:151:17: error: expected ‘;’ at end of input
  151 |     input_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_4368b3c4.c:151:5: error: expected declaration or statement at end of input
  151 |     input_matrix
      |     ^~~~~~~~~~~~
